# citro3d-rs

./: .gitignore  Cargo.toml  README.md  bindgen.sh  build.rs  rustfmt.toml
.github/workflows/: ci.yml  docs.yml
bindgen-citro3d/: Cargo.toml
bindgen-citro3d/src/: main.rs
citro2d/: Cargo.toml
citro2d-sys/: Cargo.toml  LICENSE  README.md  build.rs
citro2d-sys/src/: lib.rs
citro2d/examples/: 2d_shapes.rs  breakout.rs
citro2d/src/: error.rs  lib.rs  render.rs  shapes.rs
citro3d/: Cargo.toml  README.md  build.rs
citro3d-macros/: Cargo.toml  README.md  build.rs
citro3d-macros/src/: lib.rs
citro3d-macros/tests/: bad-shader.pica  integration.pica  integration.rs
citro3d-sys/: Cargo.toml  README.md  bindgen.sh  build.rs
citro3d-sys/src/: base.rs  bindings.rs  gx.rs  lib.rs  os.rs  renderqueue.rs  texenv.rs  uniforms.rs
citro3d/examples/: cube.rs  fragment-light.rs  multiple-buffers.rs  render-to-texture.rs  skybox.rs  textured.rs  triangle.rs
citro3d/examples/assets/: .gitignore  create_texture.sh  frag-shader.pica  kitten.t3d  skybox.t3d  vshader.pica  vshader_textured.pica
citro3d/src/: attrib.rs  buffer.rs  buffers.rs  color.rs  enums.rs  error.rs  fog.rs  lib.rs  light.rs  material.rs  math.rs  render.rs  shader.rs  texenv.rs  texture.rs  uniform.rs  util.rs
citro3d/src/math/: fvec.rs  matrix.rs  ops.rs  projection.rs
citro3d/src/render/: effect.rs  transfer.rs
citro3d/src/shader/: macros.rs
citro3d/src/texture/: enums.rs
pica200/: Cargo.toml
pica200/src/: lib.rs
src/: base.rs  bindgen.rs  bindings.rs  lib.rs  texenv.rs  uniforms.rs
