[package]
name = "citro3d"
authors = ["Rust3DS Org"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "1.3.2"
bytemuck = { version = "1.10.0", features = ["extern_crate_std"] }
citro3d-macros = { version = "0.1.0", path = "../citro3d-macros" }
citro3d-sys = { git = "https://github.com/rust3ds/citro3d-rs.git" }
ctru-rs = { git = "https://github.com/rust3ds/ctru-rs.git" }
ctru-sys = { git = "https://github.com/rust3ds/ctru-rs.git" }
float-cmp = "0.9.0"
libc = "0.2.125"

[dev-dependencies]
float-cmp = "0.9.0"
test-runner = { git = "https://github.com/rust3ds/test-runner.git" }
