[package]
name = "citro3d"
authors = ["Rust3DS Org"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2024"

[dependencies]
glam = { version = "0.30.5", optional = true }
approx = { version = "0.5.1", optional = true }
bitflags = "2.9.1"
bytemuck = { version = "1.23.2", features = ["extern_crate_std"] }
citro3d-macros = { version = "0.1.0", path = "../citro3d-macros" }
citro3d-sys = { path = "../citro3d-sys" }
ctru-rs = { git = "https://github.com/rust3ds/ctru-rs.git" }
ctru-sys = { git = "https://github.com/rust3ds/ctru-rs.git" }
document-features = "0.2.11"
libc = "0.2.175"
pin_array = "0.1.2"

[features]
default = ["glam"]
## Enable this feature to use the `approx` crate for comparing vectors and matrices.
approx = ["dep:approx"]
## Enable for glam support in uniforms
glam = ["dep:glam"]

[dev-dependencies]
test-runner = { git = "https://github.com/rust3ds/ctru-rs.git" }

[dev-dependencies.citro3d]
# Basically, this works like `cargo 3ds test --features ...` for building tests
# https://github.com/rust-lang/cargo/issues/2911#issuecomment-749580481
path = "."
features = ["approx"]

[package.metadata.docs.rs]
all-features = true
default-target = "armv6k-nintendo-3ds"
targs = []
cargo-args = ["-Z", "build-std"]
